# QtImageProcessor

./: README.md  main.cpp  meson.build  qtimgprocsr.cpp  qtimgprocsr.h  resources.qrc
